Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- CSV: Included first version of the import-users-from-csv-with-meta plugin
- If user is not logged in, redirects at login screen on BuddyPress tabs 
- Solved categories error on breadcrumbs 
- Disabled gravatar requests.
- PhpInfo for xtecadmins.


Changes 15.03.20
---------------------------------------------------------------------------------------
- Set user priority on the boxes
- Hidden unnecessary boxes
- Added external links for Google Fonts
- Sets the order and the position for the boxes
- GCE: Added default values for hidden parameters and remove some metaboxes to simplify user experience
- GCE: Fixed warning message in list of calendars
- MU-PLUGIN: Created common-functions.php pluggin to include common functions which are not related only with the theme
- Fix: Show left sidebar on mobile version
- Improved header image adjustament
- Improved visualization for high screen sizes
- Add upload images capability to contributor & Restricting contributors to view only media library items they upload
- Enllaços educatius: Added two new icons ("intraweb" and "Portal de centre")
- BPDOCS: Fixed bug when uploading files
- THEME: Show comments in pages when they are enabled
- MU-PLUGIN: Reviewed default position, hiddent and collapsed meta-boxes for pages and posts
- THEME: Added some missing strings to Catalan translation like comments and edit (still is not complete)