@@ -6,11 +6,29 @@
 	<?php if( !isset($value, $value['type'], $value['default'], $value['description']) || !is_array($value)) continue; ?>
 
 	<?php 
-        //XTEC ************ ELIMINAT - Hide group information - not esencial 
-        //2014.11.20 @jmeler
-         /*
-         * 
-         * if(!empty($value['group']) && !isset($groups[$value['group']])): $groups[$value['group']] = true; ?>
+        
+        //XTEC ************ MODIFICAT - Delete redundant "settings" word
+        //2015.04.30 @jmeler
+         
+        if(!empty($value['group']) && !isset($groups[$value['group']])): $groups[$value['group']] = true; ?>
+	<tr>
+		<td colspan="3" style="border-bottom: 1px solid #e5e5e5; text-align: center;">
+			<span style="display: inline-block; position: relative; top: 14px; padding: 0 12px; background: #fff;">
+				<?php echo $value['group']; ?>
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3"></td>
+	</tr>
+	<?php endif;
+        ?>
+        
+         <?php 
+        
+        //XTEC ************ ORIGINAL
+        /* 
+        if(!empty($value['group']) && !isset($groups[$value['group']])): $groups[$value['group']] = true; ?>
 	<tr>
 		<td colspan="3" style="border-bottom: 1px solid #e5e5e5; text-align: center;">
 			<span style="display: inline-block; position: relative; top: 14px; padding: 0 12px; background: #fff;">
@@ -22,7 +40,9 @@
 		<td colspan="3"></td>
 	</tr>
 	<?php endif;
-        //FI ************/ ?>
+         * 
+         */
+        ?>
         
          <?php 
          // XTEC ************ MODIFICAT - Hide secundary options
@@ -31,7 +51,6 @@
                         array('slideSpeed',
                             'descriptionSpeed',
                             'maxWidth',
-                            'enableResponsiveness',
                             'waitUntilLoaded',
                             'showLoadingIcon',
                             'avoidFilter')))  {
