@@ -10,6 +10,7 @@ Changes in progress
 - Solved categories error on breadcrumbs 
 - Disabled gravatar requests.
 - PhpInfo for xtecadmins.
+- Slideshow plugion: Added proportional mode
 
 
 Changes 15.03.20
